feat: enhance ESLint configuration and update service documentation
- Added rules for semicolons and single quotes to ESLint configuration for improved code consistency.
- Expanded documentation for key services, detailing features and implementation specifics.
- Introduced new sections on service implementation details, security guidelines, and performance considerations.
- Updated deployment checklist and development guidelines to reflect recent changes and best practices.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,14 @@
   },
   "plugins": ["@typescript-eslint", "prettier", "unused-imports"],
   "rules": {
+    "semi": ["error", "always"],
+    "quotes": [
+      "error",
+      "single",
+      {
+        "avoidEscape": true
+      }
+    ],
     "prettier/prettier": "error",
     "prefer-const": "error",
     "no-var": "error",
