--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.2.1",
   "description": "AI-Enhanced MySQL Full-Text Search Engine",
   "main": "dist/index.js",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc && tsc-alias",
