--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,16 +4,11 @@ on:
   push:
     branches: [main, develop]
   pull_request:
-    branches: [main]
+    branches: [main, develop]
 
 jobs:
   test:
-    name: Test Suite
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x]
 
     services:
       mysql:
@@ -21,15 +16,13 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: altus4_test
-          MYSQL_USER: test_user
-          MYSQL_PASSWORD: test_password
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping -h localhost"
+          --health-cmd="mysqladmin ping"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=3
 
       redis:
         image: redis:7-alpine
@@ -39,13 +32,16 @@ jobs:
           --health-cmd="redis-cli ping"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=5
+          --health-retries=3
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x]
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
@@ -54,36 +50,99 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Wait for MySQL
+        run: |
+          until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot --silent; do
+            echo 'Waiting for MySQL...'
+            sleep 2
+          done
+
+      - name: Setup test database
+        run: |
+          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "CREATE DATABASE IF NOT EXISTS altus4_test;"
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/001_create_users_table.up.sql
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/002_create_searches_table.up.sql
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/003_create_analytics_table.up.sql
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/004_create_api_keys_table.up.sql
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/006_create_database_connections_table.up.sql
+          mysql -h 127.0.0.1 -P 3306 -u root -proot altus4_test < migrations/007_create_search_analytics_table.up.sql
+
       - name: Run linting
         run: npm run lint
 
       - name: Run type checking
+        run: npm run typecheck
+
+      - name: Build project
         run: npm run build
 
-      - name: Wait for services
-        run: |
-          timeout 30 bash -c 'until nc -z localhost 3306; do sleep 1; done'
-          timeout 30 bash -c 'until nc -z localhost 6379; do sleep 1; done'
-
-      - name: Run tests
+      - name: Run unit tests with coverage
         run: npm run test:coverage
         env:
           NODE_ENV: test
-          DB_HOST: localhost
+          DB_HOST: 127.0.0.1
           DB_PORT: 3306
-          DB_USERNAME: test_user
-          DB_PASSWORD: test_password
+          DB_USERNAME: root
+          DB_PASSWORD: root
           DB_DATABASE: altus4_test
-          REDIS_HOST: localhost
+          REDIS_HOST: 127.0.0.1
           REDIS_PORT: 6379
-          JWT_SECRET: test_jwt_secret_for_ci_minimum_32_characters
-          ENCRYPTION_KEY: test_encryption_key_32_characters_long
+          JWT_SECRET: test-jwt-secret-for-ci
+          ENCRYPTION_KEY: test-encryption-key-32-chars-long
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
+      - name: Run integration tests
+        run: npm run test:integration
+        env:
+          NODE_ENV: test
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_USERNAME: root
+          DB_PASSWORD: root
+          DB_DATABASE: altus4_test
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
+          JWT_SECRET: test-jwt-secret-for-ci
+          ENCRYPTION_KEY: test-encryption-key-32-chars-long
+
+      - name: Run performance tests
+        run: npm run test:performance
+        env:
+          NODE_ENV: test
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_USERNAME: root
+          DB_PASSWORD: root
+          DB_DATABASE: altus4_test
+          REDIS_HOST: 127.0.0.1
+          REDIS_PORT: 6379
+          JWT_SECRET: test-jwt-secret-for-ci
+          ENCRYPTION_KEY: test-encryption-key-32-chars-long
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage/lcov.info
+          files: ./coverage/lcov.info
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
+
+  security:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run security audit
+        run: npm audit --audit-level=high
+
+      - name: Run dependency check
+        run: npx audit-ci --config .auditci.json || true
