refactor(tests): restructure test setup and helpers
- Removed obsolete test files: search.performance.test.d.ts, setup.d.ts, setup.ts, and test-database.ts.
- Introduced new environment setup for tests in env.setup.js.
- Created global setup and teardown files for Jest.
- Implemented integration test setup in integration.setup.ts with improved mocking for MySQL and Redis.
- Added refresh setup to allow optional real database refresh during tests.
- Updated test helpers to streamline database and Redis connection management.
- Enhanced performance measurement and memory usage assertions in search performance tests.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "author": "Jerome Thayananthajothy",
   "license": "MIT",
   "devDependencies": {
+    "@faker-js/faker": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
