docs: document Laravel-like migration CLI and npm scripts; usage, options, safety, seeds

--- a/package.json
+++ b/package.json
@@ -29,9 +29,15 @@
     "validate": "npm run check && npm run test",
     "fix": "npm run lint:fix && npm run format",
     "migrate": "./bin/migrate up",
-    "migrate:up": "./bin/migrate up",
-    "migrate:down": "./bin/migrate down",
-    "migrate:status": "./bin/migrate status",
+    "migrate:run": "./bin/migrate migrate",
+    "migrate:install": "./bin/migrate migrate:install",
+    "migrate:status": "./bin/migrate migrate:status",
+    "migrate:rollback": "./bin/migrate migrate:rollback",
+    "migrate:reset": "./bin/migrate migrate:reset",
+    "migrate:refresh": "./bin/migrate migrate:refresh",
+    "migrate:fresh": "./bin/migrate migrate:fresh",
+    "migrate:up": "./bin/migrate migrate:up",
+    "migrate:down": "./bin/migrate migrate:down",
     "dev:start": "./bin/dev-start",
     "dev:stop": "./bin/dev-stop",
     "dev:reset": "./bin/dev-reset",
