--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -46,8 +46,13 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Prepare npm
+        run: |
+          npm config set registry https://registry.npmjs.org/
+          npm cache clean --force
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --no-audit
 
       - name: Build project
         run: npm run build
