--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,8 +23,13 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
+      - name: Prepare npm
+        run: |
+          npm config set registry https://registry.npmjs.org/
+          npm cache clean --force
+
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --no-audit
 
       - name: Run security audit
         run: npm audit --audit-level=moderate
