feat: enhance CORS configuration and update allowed origins for local development

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,15 @@ RATE_LIMIT_WINDOW_MS=900000  # 15 minutes in milliseconds
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
+# Default local development servers are included automatically:
+# - http://localhost:5173 (Vite)
+# - http://localhost:3000 (React/Next.js)
+# - http://localhost:3001 (Alternative dev port)
+# - http://localhost:4173 (Vite preview)
+# - http://localhost:8080 (Vue CLI)
+# - http://127.0.0.1:5173 and http://127.0.0.1:3000 (localhost aliases)
+# Add any additional origins (production domains, etc.) here:
+ALLOWED_ORIGINS=https://yourdomain.com,https://app.yourdomain.com
 
 # Logging
 LOG_LEVEL=info
