feat: implement Node-based CLI for migrations and add integration tests

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.3.0",
   "description": "AI-Enhanced MySQL Full-Text Search Engine",
   "main": "dist/src/index.js",
+  "bin": {
+    "altus": "bin/altus"
+  },
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
@@ -28,16 +31,17 @@
     "check": "npm run typecheck && npm run lint && npm run format:check",
     "validate": "npm run check && npm run test",
     "fix": "npm run lint:fix && npm run format",
-    "migrate": "./bin/migrate up",
-    "migrate:run": "./bin/migrate migrate",
-    "migrate:install": "./bin/migrate migrate:install",
-    "migrate:status": "./bin/migrate migrate:status",
-    "migrate:rollback": "./bin/migrate migrate:rollback",
-    "migrate:reset": "./bin/migrate migrate:reset",
-    "migrate:refresh": "./bin/migrate migrate:refresh",
-    "migrate:fresh": "./bin/migrate migrate:fresh",
-    "migrate:up": "./bin/migrate migrate:up",
-    "migrate:down": "./bin/migrate migrate:down",
+    "migrate": "altus migrate",
+    "migrate:run": "altus migrate:run",
+    "migrate:install": "altus migrate:install",
+    "migrate:status": "altus migrate:status",
+    "migrate:rollback": "altus migrate:rollback",
+    "migrate:reset": "altus migrate:reset",
+    "migrate:refresh": "altus migrate:refresh",
+    "migrate:fresh": "altus migrate:fresh",
+    "migrate:up": "altus migrate:up",
+    "migrate:down": "altus migrate:down",
+    "cli": "node -r dotenv/config dist/src/cli/index.js",
     "dev:start": "./bin/dev-start",
     "dev:stop": "./bin/dev-stop",
     "dev:reset": "./bin/dev-reset",
@@ -47,6 +51,7 @@
     "security:verify-commits": "./bin/security/verify-commits.sh",
     "security:setup-gpg": "./bin/security/setup-gpg.sh",
     "security:configure-gpg": "./bin/security/setup-gpg.sh configure",
+    "security:generate-key": "./bin/security/generate-encryption-key.sh",
     "security:generate-jwt": "./bin/security/generate-jwt-secret.sh",
     "hooks:test": "./bin/test/test-hooks.sh",
     "pre-commit": "lint-staged && npm run validate && npm run build",
