feat: add Heroku deployment support and configuration, including environment variables, scripts, and database connection utilities

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,9 @@ BCRYPT_ROUNDS=12
 # Development/Testing
 ENABLE_QUERY_LOGGING=true
 ENABLE_PERFORMANCE_MONITORING=true
+
+# Heroku Add-on Configuration (automatically set by Heroku)
+# These are set automatically when you provision add-ons in Heroku
+# CLEARDB_DATABASE_URL=mysql://username:password@host:port/database_name
+# REDIS_URL=redis://:password@host:port
+# JAWSDB_URL=mysql://username:password@host:port/database_name (alternative MySQL add-on)
