--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc && tsc-alias",
     "start": "node -r dotenv/config dist/src/index.js",
+    "postbuild": "npm run typecheck",
+    "heroku-postbuild": "npm run build",
     "clean": "rm -rf dist coverage .nyc_output",
     "typecheck": "tsc --noEmit",
     "test": "jest --testPathIgnorePatterns=tests/integration",
@@ -31,17 +33,22 @@
     "check": "npm run typecheck && npm run lint && npm run format:check",
     "validate": "npm run check && npm run test",
     "fix": "npm run lint:fix && npm run format",
-    "migrate": "altus migrate",
-    "migrate:run": "altus migrate:run",
-    "migrate:install": "altus migrate:install",
-    "migrate:status": "altus migrate:status",
-    "migrate:rollback": "altus migrate:rollback",
-    "migrate:reset": "altus migrate:reset",
-    "migrate:refresh": "altus migrate:refresh",
-    "migrate:fresh": "altus migrate:fresh",
-    "migrate:up": "altus migrate:up",
-    "migrate:down": "altus migrate:down",
+    "migrate": "./bin/altus migrate",
+    "migrate:run": "./bin/altus migrate:run",
+    "migrate:install": "./bin/altus migrate:install",
+    "migrate:status": "./bin/altus migrate:status",
+    "migrate:rollback": "./bin/altus migrate:rollback",
+    "migrate:reset": "./bin/altus migrate:reset",
+    "migrate:refresh": "./bin/altus migrate:refresh",
+    "migrate:fresh": "./bin/altus migrate:fresh",
+    "migrate:up": "./bin/altus migrate:up",
+    "migrate:down": "./bin/altus migrate:down",
+    "migrate:remote": "NODE_ENV=production npm run migrate:run",
+    "migrate:remote:status": "NODE_ENV=production npm run migrate:status",
+    "migrate:remote:rollback": "NODE_ENV=production npm run migrate:rollback",
+    "test:db:remote": "NODE_ENV=production npm run test:db",
     "cli": "node -r dotenv/config dist/src/cli/index.js",
+    "test:db": "npx ts-node -r tsconfig-paths/register src/cli/test-db.ts",
     "dev:start": "./bin/dev-start",
     "dev:stop": "./bin/dev-stop",
     "dev:reset": "./bin/dev-reset",
