--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "typescript"
   ],
   "author": "Jerome Thayananthajothy",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@faker-js/faker": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
